@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.3-0.7
-Date: 2008-03-26
+Version: 0.3-0.8
+Date: 2008-04-19
 Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Depends: R (>= 2.5.0), filehash, Matrix, methods, Snowball, XML
